Added users, controlls and validation
