# routes/index.js
@@ -2,6 +2,7 @@
 const routes = require('express').Router();
 
 routes.use('/vehicles', require('./vehicles'));
+routes.use('/users', require('./users'));
 routes.use('/', require('./swagger'));
 
 module.exports = routes;
